 scale areas with dense AP population.                                              

2007-02-07 (mathilda)
- some preferred ssid fixes, but not entirely there yet
- support spaces in SSIDs to be ignored (have to be replaced by '*')
- support spaces in preferred SSIDs  (have to be replaced by '*')
- scan more thoroughly for networks
- support wep-encrypted preferred networks

2007-02-06 (mathilda,JP)
- merge webui changes without disturbing existing nvram variables
- fix looking for preferred SSIDs (nvram set autoap_prefssid="ssid1 ssid2 ...")
  this is restricted now to open ssids without spaces.
- fix problem with newest builds
- new nvram variable autoap_prefonly, true if only interested in preferred networks.
  
 2007-01-29 (mathilda)
- some small tweaks for stability
- missing aap_ for dhcpw
  
 2007-01-28 (jhonnyprimus)
- add aap_logcurrsig.  invoking this function
  with no arugments will log the current signal
  strength of the active AP.
  
 2007-01-16 (mathilda)
- major overhaul aap_scanman and aap_joinpref
- connection to wep-networks working now
- you can have both wep and open search enabled separately or together
- no need for the subdir autoap/wep anymore
- dhcp is safer now
  
  2007-01-12 (mathilda)
- truncate logfile works now.
- preserve HTML header when truncating logfile
- new nvram variable autoap_logsize (default 1000 lines)
  
  2007-01-11 (mathilda)
- getting rid of $logparse 
- restructure aap_init_scan() some (no recursive calls, leave the checking to
  aap_checkjoin() )
                                                                                    
  2007-01-10 (mathilda)
- make it insist more on ping to avoid changing connection for no reason
- for some reason DD-WRT is not reliably assigning a GW address 
  (nvram get wan_gateway). Making it tolerant for this behavior.
- cleanup aap_inet_chk more. 24 lines down from 39

  2007-01-09 (mathilda)
- removed variable inet_two (was unused)
- update cur_wip in aap_init_scan()